ingress-dual/nginx-back-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    meta.helm.sh/release-name: ingress-nginx-back
    meta.helm.sh/release-namespace: ingress-nginx-back
  creationTimestamp: "2025-10-16T11:08:59Z"
  generation: 1
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx-back
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.13.3
    helm.sh/chart: ingress-nginx-4.13.3
  name: nginx-back
  resourceVersion: "276336"
  uid: f8aa94b2-48f8-46a1-a2d9-acd3c2226a26
spec:
  controller: k8s.io/ingress-nginx-back
